--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
 <script type="text/javascript"  src="js\earcut.js"></script>
 <script type="text/javascript"  src="js\whammy.js"></script>
 <script type="text/javascript"  src="js\jszip.js"></script>
+<script type="text/javascript"  src="js\draco_wasm_wrapper.js"></script>
+<script type="text/javascript"  src="js\draco_decoder_wasm.js"></script>
 
     <script type="text/javascript" src="js/cables.js"></script>
 <script type="text/javascript" src="js/ops.js"></script>
 
-    <script type="text/javascript"  src="js/cgl_shadermodifier.js"></script>
-<script type="text/javascript"  src="js/cgl_copytexture.js"></script>
+    <script type="text/javascript"  src="js/cgl_copytexture.js"></script>
 <script type="text/javascript"  src="js/vargetset.js"></script>
+<script type="text/javascript"  src="js/cgl_shadermodifier.js"></script>
 
 
     <script type="text/javascript">
